# template-makefile-project

./: .gitignore  CMakeLists.txt  Makefile  TokenFilePackerTool.py  TokenFilePackerToolStreams.py  altStitcher.cpp  altStitcher.h  alt_stitcher.cpp  alt_stitcher.h  binarysearch.cpp  binarysearch.h  config.h  eclipse-cmake-build.sh  findsubstring.cpp  findsubstring.h  gbcFile.cpp  gbcFile.h  gbcFileTest.cpp  gbcFileTest.h  gcc_stubs.cpp  gcc_stubs.cpp_disabled  gcc_stubs.hpp  gcc_stubs.hpp_disabled  groupanagrams.cpp  groupanagrams.h  lettercombinations.cpp  lettercombinations.h  lrucache.cpp  lrucache.h  main.cc  main.cpp  memalloc.cpp  memalloc.h  mergeintervals.cpp  mergeintervals.h  ppp.cpp  ppp.h  process.cpp  process.h  processchild.cpp  (+34 more)
aggregateInit/: aggregateInitMain.cpp  aggregateInitMain.h
altStitcher/: altStitcher.cpp  altStitcher.h  altStitcherMain.cpp  altStitcherMain.h
classes/: classesBase.cpp  classesBase.h  classesMain.cpp  classesMain.h
cross_references/: ClassA.cpp  ClassA.h  IClassA.h  IClassB.h  classA.cpp  classB.cpp  classB.h  crossRefMain.cpp  crossRefMain.h
exceptions/: exceptionsBase.cpp  exceptionsBase.h  exceptionsMain.cpp  exceptionsMain.h
mem_alloc/: memallocMain.cpp  memallocMain.h
myStitcher/: myStitcher.h  myStitcherMain.cpp  myStitcherMain.h
qt_subdir/: qtexampleskeleton.cpp  qtexampleskeleton.h
smart_pointers/: SmartPtr.h  smartPtrsMain.cpp  smartPtrsMain.h
stitcher/: myStitcher.cpp  myStitcher.h  myStitcherMain.cpp  myStitcherMain.h
stitchingDetailed/: stitchingDetailedMain.cpp
subscriber/: isubscriber.h  notifier.cpp  notifier.h  subscriber.cpp  subscriber.h  subscriberMain.cpp  subscriberMain.h
templates/: templateCallback.h  templateExample.h  templateUnit1.cpp  templateUnit1.h  templateUnit2.cpp  templateUnit2.h  templatesMain.cpp  templatesMain.h
threads/: joinableThread.cpp  joinableThread.h  threadsMain.cpp  threadsMain.h
tutorialStitcher/: tutorialStitcherMain.cpp  tutorialStitcherMain.h
utilits/: round.h
utils/: stringUtils.cpp  stringUtils.h  timeElapsed.cpp  timeElapsed.h
virtual_inheritance/: VirtualInheritanceMain.cpp  VirtualInheritanceMain.h
